# autogen

./: Dockerfile  README.md  compose.yml  pyproject.toml
autogen/: autogen.py  main.py
